Fixed faq section mobile responsiveness

--- a/components/FAQ/faq.module.scss
+++ b/components/FAQ/faq.module.scss
@@ -9,6 +9,10 @@
   flex-direction: column;
   padding: 0px 95px;
   gap: 32px;
+  @include respond(mobile-screen) {
+    height: fit-content;
+    padding: 0px 6% 50px 6%;
+  }
 
   &__heading {
     @include heading;
@@ -16,6 +20,9 @@
   &__image {
     width: 50%;
     position: relative;
+    @include respond(mobile-screen) {
+      display: none;
+    }
     &-icon {
       position: absolute;
       top: 16%;
@@ -34,5 +41,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    @include respond(mobile-screen) {
+      width: 100%;
+      gap: 44px;
+    }
   }
 }
